Fix T73428: Editor type dropdown menu missing in VSE

Mistake in 6a49161c8c60, the tool-header region was not created when
creating a new VSE editor (as opposed to an existing one in some
workspace).

There was also no way to get the tool-header to show in such cases.